# bnxlink

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  cli.py
agent/pipes/: redactor.py  summarizer.py  validator.py
api/: __init__.py  main.py  policy.py  security.py
data/: channels.yaml  ledger.ndjson
data/manifests/core/: dev-seed.json  test-promotion.json
data/manifests/newdataset/: test-manifest.json
data/refs/activity/deploy_apollo/: 2025-08-10.json
data/refs/activity/task_generate_readme/: 2025-08-10.json
data/refs/entity/project_apollo/: 2025-08-10.json
data/refs/entity/team_systems/: 2025-08-10.json
data/samples/: activity_deploy_apollo.json  activity_generate_readme.json  entity_project_apollo.json  entity_team_systems.json
db/: bnxlink.duckdb
docs/: architecture.md  data-model.md  roadmap.md  security.md
schemas/: ActivityRecord.v1.json  EntityRecord.v1.json
scripts/: build_manifest.py  canonicalize_and_hash.py  common.py  demo_e2e.sh  dev_token.py  promote_channel.py  rebuild_duckdb.py  validate_repo.py
tests/: test_api_promotion.py  test_api_promotion_normalize.py  test_auth.py  test_etag.py  test_metrics.py  test_redaction.py  test_rs256.py  test_smoke.py
